# risc-v-disassembler

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/compiled-program/: Cargo.toml  link.x
demo/compiled-program/.cargo/: config.toml
demo/compiled-program/src/: main.rs
demo/demo/: Cargo.toml
demo/demo/assets/: demo  demo.objdump
demo/demo/src/: main.rs
src/: conditions.rs  decoder.rs  helpers.rs  instructions.rs  lib.rs  macros.rs  main.rs  parser.rs  registers.rs
src/helpers/: mod.rs  variable_bit_structures.rs
src/instructions/: mod.rs  parsed_instructions.rs
src/parser/: btype.rs  itype.rs  jtype.rs  mod.rs  parser.rs  rtype.rs  stype.rs  utype.rs
tests/: integration_test.rs
