[package]
name = "risc-v-disassembler"
version = "0.0.1"
edition = "2021"
authors = ["Simon Larsson", "Yuval Levy"]
repository = "https://github.com/simlar-0/risc-v-disassembler"
license-file = "LICENSE"
keywords = ["disassembly", "embedded", "risc", "riscv", "rv32i"]
description = "Decodes RISC-V instructions into a rust enum."
readme = "README.md"

[dependencies]
thiserror = "2.0.11"